package ru.glukhov.springcourse.FirstRestApp.util;

public class PersonNotFoundException extends RuntimeException {
}
